<resources>
    <string name="app_name">Kalkulator</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_calc">Kalkulator</string>
    <string name="action_geometry">Geometryczne</string>
    <string name="title_activity_geometry">Geometryczne</string>

    <string name="hello_world">Hello world!</string>
    <string name="kwadrat">KWADRAT</string>
    <string name="trojkat">TRÓJKĄT</string>
    <string name="trapez">TRAPEZ</string>
    <string name="kolo">KOŁO</string>
    <string name="title_activity_kwadrat">Kwadrat</string>
    <string name="give">Podaj Wartości</string>
    <string name="oblicz">OBLICZ</string>
    <string name="wynik">WYNIK=</string>
    <string name="title_activity_trojkat">Trojkat</string>
    <string name="title_activity_trapez">Trapez</string>
    <string name="title_activity_kolo">Kolo</string>
    <string name="count">Oblicz</string>
    <string name="field">Pole</string>
    <string name="ok_wpi">Promień okręgu wpisanego</string>
    <string name="ok_opi2">Promień okręgu opisanego 2</string>
    <string name="ok_opi3">Promień okręgu opisanego 3</string>
    <string name="obw">Obwód</string>
    <string name="ok_opi">Promień okręgu opisanego</string>
    <string name="przek">Przekątna</string>
    <string name="bok">Długość boku</string>
    <string name="examples">Wzory</string>
    <string name="field2">Pole 2</string>
    <string name="field3">Pole 3</string>
    <string name="bok2">Długość boku 2</string>
    <string name="bok3">Długość boku 3</string>
    <string name="title_activity_wzory_kwadrat">Wzory kwadrat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_wzory_kolo">wzory_kolo</string>
    <string name="title_activity_kolo_pole">kolo_pole</string>
    <string name="title_activity_kwadrat_wzory">kwadrat_wzory</string>
    <string name="title_activity_kwadrat_polea">kwadrat_polea</string>
    <string name="title_activity_kwadrat_poled">kwadrat_poled</string>
    <string name="title_activity_kwadrat_polead">kwadrat_polead</string>
    <string name="title_activity_kwadrat_obwod">Kwadrat_obwod</string>
    <string name="title_activity_kwadrat_pr_ok_wpi">kwadrat_pr_ok_wpi</string>
    <string name="title_activity_kwadrat_pr_ok_opia">kwadrat_pr_ok_opia</string>
    <string name="title_activity_kwadrat_pr_ok_opir">kwadrat_pr_ok_opir</string>
    <string name="title_activity_kwadrat_pr_ok_opid">kwadrat_pr_ok_opid</string>
    <string name="title_activity_kwadrat_dlu_bokr">kwadrat_dlu_bokr</string>
    <string name="title_activity_kwadrat_dlu_bokrr">kwadrat_dlu_bokrr</string>
    <string name="title_activity_kwadrat_dlu_bokd">kwadrat_dlu_bokd</string>
    <string name="title_activity_kwadrat_przek">kwadrat_przek</string>
    <string name="title_activity_kolo_obwod">kolo_obwod</string>
    <string name="title_activity_kolo_pol_wyca">kolo_pol_wyca</string>
    <string name="title_activity_kolo_pol_wycg">kolo_pol_wycg</string>
    <string name="title_activity_kolo_pol_odca">kolo_pol_odca</string>
    <string name="title_activity_kolo_pol_odcg">kolo_pol_odcg</string>
    <string name="title_activity_kolo_dl_luka">kolo_dl_luka</string>
    <string name="title_activity_kolo_dl_lukg">kolo_dl_lukg</string>
    <string name="title_activity_prostokat">ProstokatActivity</string>
    <string name="title_activity_prostokat_wzory">prostokat_wzory</string>
    <string name="title_activity_prostokat_poleab">prostokat_poleab</string>
    <string name="title_activity_prostokat_poleda">prostokat_poleda</string>
    <string name="title_activity_prostokat_poledwh">prostokat_poledwh</string>
    <string name="title_activity_prostokat_obwod">prostokat_obwod</string>
    <string name="title_activity_prostokat_przekatna">prostokat_przekatna</string>
</resources>
